Add skills competencies section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h1 class="intro-heading">John Michael Mapilisan</h1>
                     <p class="intro-info">
                         I'm a self taught front-end developer based in the 
-                        Philippines. Passionate about learning new skills and 
+                        Philippines. I am passionate about learning new skills and 
                         technologies while building and improving on already 
                         acquired skill sets.
 
@@ -64,14 +64,107 @@
                         </div>
                     </div>
                 </div>
-    
+                
+                <div class="card card-skill" id="html-info">
+                    <div class="info-header">
+                        <img class="card-skill-icon" src="images/html-icon.png" alt="html icon">
+                        <h2 class="info-title">Competencies</h2>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Non-semantic elements (h1, p, lists, links, img vs. picture)</p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Semantic elements (header, section, nav)</p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Forms (input types, validation attributes, input type=”text” vs. textarea)</p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Accessible HTML (well-understood by screen readers)</p>
+                    </div>
+                </div>
+
+                <div class="card card-skill" id="css-info">
+                    <div class="info-header">
+                        <img class="card-skill-icon" src="images/css-icon.png" alt="css icon">
+                        <h2 class="info-title">Competencies</h2>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">The box model</p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Display value types (block, inline-block, inline, flex, grid)</p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Positioning (static, absolute, fixed, relative)</p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Selectors (a, .component, .component > a)</p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Pseudo-classes (:hover, :active)</p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Responsive web design (@media queries, relative units like em, mobile-first design philosophy)</p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Default stylesheet and reset.css</p>
+                    </div>
+                </div>
+
+                <div class="card card-skill" id="css-info">
+                    <div class="info-header">
+                        <img class="card-skill-icon" src="images/js-icon.png" alt="javascript icon">
+                        <h2 class="info-title">Competencies</h2>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Functions</p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Values, types, and basic operators </p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">The Document Object Model </p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Data structures </p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Basics of regular expressions </p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">Prototypes </p>
+                    </div>
+                    <div class="info-item">
+                        <img class="info-item-image" src="images/checkbox.png" alt="checkbox icon">
+                        <p class="info-item-text">ES6 syntax</p>
+                    </div>
+                </div>
+
                 <!-- Projects -->
                 <div class="card" id="project-1">
                     <h2 class="project-title">Pokememory</h2>
                     <img class="project-gif" src="images/pokememory.gif" alt="pokememory gif">
                     <div class="button-container">
-                        <div class="button-link"><a class="view-code-button" href="#">View Code</a></div>
-                        <div class="button-link"><a class="live-site-button" href="#">Live Site</a></div>
+                        <div class="button-link"><a class="view-code-button" href="https://github.com/mikowesome/memory-game" target="_blank" rel="noopener noreferrer">View Code</a></div>
+                        <div class="button-link"><a class="live-site-button" href="https://mikowesome.github.io/memory-game/" target="_blank" rel="noopener noreferrer">Live Site</a></div>
                     </div>
                 </div>
                 <div class="card" id="project-2">
@@ -107,19 +200,19 @@
                 </div>
                 <!-- LinkedIn -->
                 <div class="card" id="linkedin">
-                    <a href="https://github.com/mikowesome" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.linkedin.com/in/johnmichaelmapilisan/" target="_blank" rel="noopener noreferrer">
                         <img class="media-icon" src="images/linkedin-icon.png" alt="linkedin icon">
                     </a>
                 </div>
                 <!-- Twitter -->
                 <div class="card" id="twitter">
-                    <a href="https://github.com/mikowesome" target="_blank" rel="noopener noreferrer">
+                    <a href="#" target="_blank" rel="noopener noreferrer">
                         <img class="media-icon" src="images/twitter-icon.png" alt="twitter icon">
                     </a>
                 </div>
                 <!-- Instagram -->
                 <div class="card" id="instagram">
-                    <a href="https://github.com/mikowesome" target="_blank" rel="noopener noreferrer">
+                    <a href="#" target="_blank" rel="noopener noreferrer">
                         <img class="media-icon" src="images/instagram-icon.png" alt="instagram icon">
                     </a>
                 </div>
