Add project description

--- a/index.html
+++ b/index.html
@@ -159,15 +159,43 @@
                 </div>
 
                 <!-- Projects -->
-                <div class="card" id="project-1">
+                <div class="card card-project" id="project-1">
                     <h2 class="project-title">Pokememory</h2>
                     <img class="project-gif" src="images/pokememory.gif" alt="pokememory gif">
+                    <!-- <ul class="project-description">
+                        <li>
+                            Project demonstrates a high level of skill in manipulating 
+                        the DOM using querySelector, setAttribute, getAttribute, 
+                        createElement, appendChild.
+                        </li>
+                        <li>
+                            Project demontrates the use of arrays and objects and the 
+                        ability to manipulate them using built in Array methods such as 
+                        push and sort. It also demonstrates the ability to access and use 
+                        the information stored in the array or object.
+                        </li>
+                        <li>
+                            Project utilizes if/else statements and for loops.
+                        </li>
+                    </ul> -->
+                    <p class="project-description"><span class="project-highlight">Project</span> demonstrates a high level of skill in manipulating 
+                        the DOM using querySelector, setAttribute, getAttribute, 
+                        createElement, appendChild.
+                    </p>
+                    <p class="project-description"><span class="project-highlight">Project</span> exhibits the use of arrays and objects and the 
+                        ability to manipulate them using built in Array methods such as 
+                        push and sort. It also demonstrates the ability to access and use 
+                        the information stored in the array or object.
+                    </p>
+                    <p class="project-description">
+                        <span class="project-highlight">Project</span> utilizes if/else statements and for loops.
+                    </p>
                     <div class="button-container">
                         <div class="button-link"><a class="view-code-button" href="https://github.com/mikowesome/memory-game" target="_blank" rel="noopener noreferrer">View Code</a></div>
                         <div class="button-link"><a class="live-site-button" href="https://mikowesome.github.io/memory-game/" target="_blank" rel="noopener noreferrer">Live Site</a></div>
                     </div>
                 </div>
-                <div class="card" id="project-2">
+                <div class="card card-project" id="project-2">
                     <h2 class="project-title">Pokememory</h2>
                     <img class="project-gif" src="images/pokememory.gif" alt="pokememory gif">
                     <div class="button-container">
@@ -175,7 +203,7 @@
                         <div class="button-link"><a class="live-site-button" href="#">Live Site</a></div>
                     </div>
                 </div>
-                <div class="card" id="project-3">
+                <div class="card card-project" id="project-3">
                     <h2 class="project-title">Pokememory</h2>
                     <img class="project-gif" src="images/pokememory.gif" alt="pokememory gif">
                     <div class="button-container">
@@ -183,7 +211,7 @@
                         <div class="button-link"><a class="live-site-button" href="#">Live Site</a></div>
                     </div>
                 </div>
-                <div class="card" id="project-4">
+                <div class="card card-project" id="project-4">
                     <h2 class="project-title">Pokememory</h2>
                     <img class="project-gif" src="images/pokememory.gif" alt="pokememory gif">
                     <div class="button-container">
@@ -202,18 +230,6 @@
                 <div class="card" id="linkedin">
                     <a href="https://www.linkedin.com/in/johnmichaelmapilisan/" target="_blank" rel="noopener noreferrer">
                         <img class="media-icon" src="images/linkedin-icon.png" alt="linkedin icon">
-                    </a>
-                </div>
-                <!-- Twitter -->
-                <div class="card" id="twitter">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                        <img class="media-icon" src="images/twitter-icon.png" alt="twitter icon">
-                    </a>
-                </div>
-                <!-- Instagram -->
-                <div class="card" id="instagram">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                        <img class="media-icon" src="images/instagram-icon.png" alt="instagram icon">
                     </a>
                 </div>
             </div>
