Add 2nd project contents

--- a/index.html
+++ b/index.html
@@ -162,22 +162,9 @@
                 <div class="card card-project" id="project-1">
                     <h2 class="project-title">Pokememory</h2>
                     <img class="project-gif" src="images/pokememory.gif" alt="pokememory gif">
-                    <!-- <ul class="project-description">
-                        <li>
-                            Project demonstrates a high level of skill in manipulating 
-                        the DOM using querySelector, setAttribute, getAttribute, 
-                        createElement, appendChild.
-                        </li>
-                        <li>
-                            Project demontrates the use of arrays and objects and the 
-                        ability to manipulate them using built in Array methods such as 
-                        push and sort. It also demonstrates the ability to access and use 
-                        the information stored in the array or object.
-                        </li>
-                        <li>
-                            Project utilizes if/else statements and for loops.
-                        </li>
-                    </ul> -->
+                    <p class="project-description"><span class="project-highlight">Pokememory</span>
+                        is a simple memory game where you match two of the same pokemon. 
+                    </p>
                     <p class="project-description"><span class="project-highlight">Project</span> demonstrates a high level of skill in manipulating 
                         the DOM using querySelector, setAttribute, getAttribute, 
                         createElement, appendChild.
@@ -196,11 +183,24 @@
                     </div>
                 </div>
                 <div class="card card-project" id="project-2">
-                    <h2 class="project-title">Pokememory</h2>
-                    <img class="project-gif" src="images/pokememory.gif" alt="pokememory gif">
+                    <h2 class="project-title">Library App</h2>
+                    <img class="project-gif" src="images/library.gif" alt="library app gif">
+                    <p class="project-description"><span class="project-highlight">Library App</span>
+                        is a library web app that lets you store books you have read or plan to read like a normal library.
+                    </p>
+                    <p class="project-description"><span class="project-highlight">Project</span>
+                        shows the ability to use object constructors and use the data, store in an array or manipulate the object.
+                    </p>
+                    <p class="project-description"><span class="project-highlight">Project</span> 
+                        demonstrates a high level of skill in manipulating the DOM using innerHTML, textContent, classList etc.
+                    </p>
+                    <p class="project-description">
+                        <span class="project-highlight">Project</span>
+                        Project exhibits the ability of using local storage to store data and to retrieve data from it.  
+                    </p>
                     <div class="button-container">
-                        <div class="button-link"><a class="view-code-button" href="#">View Code</a></div>
-                        <div class="button-link"><a class="live-site-button" href="#">Live Site</a></div>
+                        <div class="button-link"><a class="view-code-button" href="https://github.com/mikowesome/library">View Code</a></div>
+                        <div class="button-link"><a class="live-site-button" href="https://mikowesome.github.io/library/">Live Site</a></div>
                     </div>
                 </div>
                 <div class="card card-project" id="project-3">
