Fix typo in Library app description

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     </p>
                     <p class="project-description">
                         <span class="project-highlight">Project</span>
-                        Project exhibits the ability of using local storage to store data and to retrieve data from it.  
+                         exhibits the ability of using local storage to store data and to retrieve data from it.  
                     </p>
                     <div class="button-container">
                         <div class="button-link"><a class="view-code-button" href="https://github.com/mikowesome/library">View Code</a></div>
