Add filters functionality

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav class="navbar">
             <div class="filters-container">
                 <ul class="filters-list">
-                    <li class="filter active">All</li>
-                    <li class="filter">About</li>
-                    <li class="filter">Projects</li>
-                    <li class="filter">Media</li>
+                    <li class="filter active" id="filter-all">All</li>
+                    <li class="filter" id="filter-about">About</li>
+                    <li class="filter" id="filter-projects">Projects</li>
+                    <li class="filter" id="filter-media">Media</li>
                 </ul>
             </div>
         </nav>
@@ -221,13 +221,13 @@
                 </div>
     
                 <!-- Github -->
-                <div class="card" id="github">
+                <div class="card card-media" id="github">
                     <a href="https://github.com/mikowesome" target="_blank" rel="noopener noreferrer">
                         <img class="media-icon" src="images/github-icon2.png" alt="github icon">
                     </a>
                 </div>
                 <!-- LinkedIn -->
-                <div class="card" id="linkedin">
+                <div class="card card-media" id="linkedin">
                     <a href="https://www.linkedin.com/in/johnmichaelmapilisan/" target="_blank" rel="noopener noreferrer">
                         <img class="media-icon" src="images/linkedin-icon.png" alt="linkedin icon">
                     </a>
