Fix links not opening new tab

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <span class="project-highlight">Project</span> utilizes if/else statements and for loops.
                     </p>
                     <div class="button-container">
-                        <div class="button-link"><a class="view-code-button" href="https://github.com/mikowesome/memory-game" target="_blank" rel="noopener noreferrer">View Code</a></div>
+                        <div class="button-link"><a class="view-code-button" href="https://github.com/mikowesome/memory-game"  target="_blank" rel="noopener noreferrer">View Code</a></div>
                         <div class="button-link"><a class="live-site-button" href="https://mikowesome.github.io/memory-game/" target="_blank" rel="noopener noreferrer">Live Site</a></div>
                     </div>
                 </div>
@@ -199,24 +199,24 @@
                          exhibits the ability of using local storage to store data and to retrieve data from it.  
                     </p>
                     <div class="button-container">
-                        <div class="button-link"><a class="view-code-button" href="https://github.com/mikowesome/library">View Code</a></div>
-                        <div class="button-link"><a class="live-site-button" href="https://mikowesome.github.io/library/">Live Site</a></div>
+                        <div class="button-link"><a class="view-code-button" href="https://github.com/mikowesome/library" target="_blank" rel="noopener noreferrer">View Code</a></div>
+                        <div class="button-link"><a class="live-site-button" href="https://mikowesome.github.io/library/" target="_blank" rel="noopener noreferrer">Live Site</a></div>
                     </div>
                 </div>
                 <div class="card card-project" id="project-3">
                     <h2 class="project-title">Pokememory</h2>
                     <img class="project-gif" src="images/pokememory.gif" alt="pokememory gif">
                     <div class="button-container">
-                        <div class="button-link"><a class="view-code-button" href="#">View Code</a></div>
-                        <div class="button-link"><a class="live-site-button" href="#">Live Site</a></div>
+                        <div class="button-link"><a class="view-code-button" href="#" target="_blank" rel="noopener noreferrer">View Code</a></div>
+                        <div class="button-link"><a class="live-site-button" href="#" target="_blank" rel="noopener noreferrer">Live Site</a></div>
                     </div>
                 </div>
                 <div class="card card-project" id="project-4">
                     <h2 class="project-title">Pokememory</h2>
                     <img class="project-gif" src="images/pokememory.gif" alt="pokememory gif">
                     <div class="button-container">
-                        <div class="button-link"><a class="view-code-button" href="#">View Code</a></div>
-                        <div class="button-link"><a class="live-site-button" href="#">Live Site</a></div>
+                        <div class="button-link"><a class="view-code-button" href="#" target="_blank" rel="noopener noreferrer">View Code</a></div>
+                        <div class="button-link"><a class="live-site-button" href="#" target="_blank" rel="noopener noreferrer">Live Site</a></div>
                     </div>
                 </div>
     
