Add nendoroid and lorem gymsum project, restructured project section

--- a/index.html
+++ b/index.html
@@ -160,29 +160,50 @@
 
                 <!-- Projects -->
                 <div class="card card-project" id="project-1">
-                    <h2 class="project-title">Pokememory</h2>
-                    <img class="project-gif" src="images/pokememory.gif" alt="pokememory gif">
-                    <p class="project-description"><span class="project-highlight">Pokememory</span>
-                        is a simple memory game where you match two of the same pokemon. 
+                    <h2 class="project-title">Nendoroid</h2>
+                    <img class="project-gif" src="images/nendoroid.gif" alt="nendoroid gif">
+                    <p class="project-description"><span class="project-highlight">Nendoroid</span>
+                        is a single page e-commerce website that displays products dynamically into the webpage. It also lets you add products to the cart, modify the amount, remove a particular item and empty its content.
                     </p>
-                    <p class="project-description"><span class="project-highlight">Project</span> demonstrates a high level of skill in manipulating 
-                        the DOM using querySelector, setAttribute, getAttribute, 
-                        createElement, appendChild.
+                    <p class="project-description"><span class="project-highlight">Project</span>
+                        shows the ability to use class constructors to create reusable and well structured code.
                     </p>
-                    <p class="project-description"><span class="project-highlight">Project</span> exhibits the use of arrays and objects and the 
-                        ability to manipulate them using built in Array methods such as 
-                        push and sort. It also demonstrates the ability to access and use 
-                        the information stored in the array or object.
+                    <p class="project-description"><span class="project-highlight">Project</span> 
+                        demonstrates a high level of skill in manipulating the DOM and DOM traversing.
                     </p>
                     <p class="project-description">
-                        <span class="project-highlight">Project</span> utilizes if/else statements and for loops.
+                        <span class="project-highlight">Project</span>
+                         exhibits the ability of fetching data from a local json file and using local storage to store data and to retrieve data from it.  
                     </p>
                     <div class="button-container">
                         <div class="button-link"><a class="view-code-button" href="https://github.com/mikowesome/memory-game"  target="_blank" rel="noopener noreferrer">View Code</a></div>
                         <div class="button-link"><a class="live-site-button" href="https://mikowesome.github.io/memory-game/" target="_blank" rel="noopener noreferrer">Live Site</a></div>
                     </div>
                 </div>
+
                 <div class="card card-project" id="project-2">
+                    <h2 class="project-title">Lorem GYMsum</h2>
+                    <img class="project-gif" src="images/lorem-gymsum.gif" alt="lorem gymsum gif">
+                    <p class="project-description"><span class="project-highlight">Lorem GYMsum</span>
+                        is a landing page dedicated for a gym which contains various sections such as home, services, pricing, contact etc.
+                    </p>
+                    <p class="project-description"><span class="project-highlight">Project</span>
+                        shows the ability to create responsive web design.
+                    </p>
+                    <p class="project-description"><span class="project-highlight">Project</span> 
+                        demonstrates skill in writing semantic and non-semantic html.
+                    </p>
+                    <p class="project-description">
+                        <span class="project-highlight">Project</span>
+                         exhibits the ability of using advance css such as making responsive images, media queries, css functions etc.  
+                    </p>
+                    <div class="button-container">
+                        <div class="button-link"><a class="view-code-button" href="#" target="_blank" rel="noopener noreferrer">View Code</a></div>
+                        <div class="button-link"><a class="live-site-button" href="#" target="_blank" rel="noopener noreferrer">Live Site</a></div>
+                    </div>
+                </div>
+
+                <div class="card card-project" id="project-3">
                     <h2 class="project-title">Library App</h2>
                     <img class="project-gif" src="images/library.gif" alt="library app gif">
                     <p class="project-description"><span class="project-highlight">Library App</span>
@@ -203,17 +224,25 @@
                         <div class="button-link"><a class="live-site-button" href="https://mikowesome.github.io/library/" target="_blank" rel="noopener noreferrer">Live Site</a></div>
                     </div>
                 </div>
-                <div class="card card-project" id="project-3">
-                    <h2 class="project-title">Pokememory</h2>
-                    <img class="project-gif" src="images/pokememory.gif" alt="pokememory gif">
-                    <div class="button-container">
-                        <div class="button-link"><a class="view-code-button" href="#" target="_blank" rel="noopener noreferrer">View Code</a></div>
-                        <div class="button-link"><a class="live-site-button" href="#" target="_blank" rel="noopener noreferrer">Live Site</a></div>
-                    </div>
-                </div>
+
                 <div class="card card-project" id="project-4">
                     <h2 class="project-title">Pokememory</h2>
                     <img class="project-gif" src="images/pokememory.gif" alt="pokememory gif">
+                    <p class="project-description"><span class="project-highlight">Pokememory</span>
+                        is a simple memory game where you match two of the same pokemon. 
+                    </p>
+                    <p class="project-description"><span class="project-highlight">Project</span> demonstrates a high level of skill in manipulating 
+                        the DOM using querySelector, setAttribute, getAttribute, 
+                        createElement, appendChild.
+                    </p>
+                    <p class="project-description"><span class="project-highlight">Project</span> exhibits the use of arrays and objects and the 
+                        ability to manipulate them using built in Array methods such as 
+                        push and sort. It also demonstrates the ability to access and use 
+                        the information stored in the array or object.
+                    </p>
+                    <p class="project-description">
+                        <span class="project-highlight">Project</span> utilizes if/else statements and for loops.
+                    </p>
                     <div class="button-container">
                         <div class="button-link"><a class="view-code-button" href="#" target="_blank" rel="noopener noreferrer">View Code</a></div>
                         <div class="button-link"><a class="live-site-button" href="#" target="_blank" rel="noopener noreferrer">Live Site</a></div>
