Update view code and view site links for the projects

--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                          exhibits the ability of fetching data from a local json file and using local storage to store data and to retrieve data from it.  
                     </p>
                     <div class="button-container">
-                        <div class="button-link"><a class="view-code-button" href="https://github.com/mikowesome/memory-game"  target="_blank" rel="noopener noreferrer">View Code</a></div>
-                        <div class="button-link"><a class="live-site-button" href="https://mikowesome.github.io/memory-game/" target="_blank" rel="noopener noreferrer">Live Site</a></div>
+                        <div class="button-link"><a class="view-code-button" href="https://github.com/mikowesome/nendoroid"  target="_blank" rel="noopener noreferrer">View Code</a></div>
+                        <div class="button-link"><a class="live-site-button" href="https://mikowesome.github.io/nendoroid/" target="_blank" rel="noopener noreferrer">Live Site</a></div>
                     </div>
                 </div>
 
@@ -198,8 +198,8 @@
                          exhibits the ability of using advance css such as making responsive images, media queries, css functions etc.  
                     </p>
                     <div class="button-container">
-                        <div class="button-link"><a class="view-code-button" href="#" target="_blank" rel="noopener noreferrer">View Code</a></div>
-                        <div class="button-link"><a class="live-site-button" href="#" target="_blank" rel="noopener noreferrer">Live Site</a></div>
+                        <div class="button-link"><a class="view-code-button" href="https://github.com/mikowesome/lorem-gymsum" target="_blank" rel="noopener noreferrer">View Code</a></div>
+                        <div class="button-link"><a class="live-site-button" href="https://mikowesome.github.io/lorem-gymsum/" target="_blank" rel="noopener noreferrer">Live Site</a></div>
                     </div>
                 </div>
 
@@ -244,8 +244,8 @@
                         <span class="project-highlight">Project</span> utilizes if/else statements and for loops.
                     </p>
                     <div class="button-container">
-                        <div class="button-link"><a class="view-code-button" href="#" target="_blank" rel="noopener noreferrer">View Code</a></div>
-                        <div class="button-link"><a class="live-site-button" href="#" target="_blank" rel="noopener noreferrer">Live Site</a></div>
+                        <div class="button-link"><a class="view-code-button" href="https://github.com/mikowesome/memory-game" target="_blank" rel="noopener noreferrer">View Code</a></div>
+                        <div class="button-link"><a class="live-site-button" href="https://mikowesome.github.io/memory-game/" target="_blank" rel="noopener noreferrer">Live Site</a></div>
                     </div>
                 </div>
     
