Update library description

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <h2 class="project-title">Library App</h2>
                     <img class="project-gif" src="images/library.gif" alt="library app gif">
                     <p class="project-description"><span class="project-highlight">Library App</span>
-                        is a library web app that lets you store books you have read or plan to read like a normal library.
+                        is a library web app that lets you create, remove, update and delete books you have read or plan to read like a normal library.
                     </p>
                     <p class="project-description"><span class="project-highlight">Project</span>
                         shows the ability to use object constructors and use the data, store in an array or manipulate the object.
