Update project description

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <h2 class="project-title">Nendoroid</h2>
                     <img class="project-gif" src="images/nendoroid.gif" alt="nendoroid gif">
                     <p class="project-description"><span class="project-highlight">Nendoroid</span>
-                        is a single page e-commerce website that displays products dynamically into the webpage. It also lets you add products to the cart, modify the amount, remove a particular item and empty its content.
+                        is a single-page e-commerce website display products dynamically into the web page. You can also add items to the shopping cart, modify the amount, remove an item, or empty the cart.
                     </p>
                     <p class="project-description"><span class="project-highlight">Project</span>
                         shows the ability to use class constructors to create reusable and well structured code.
@@ -185,7 +185,7 @@
                     <h2 class="project-title">Lorem GYMsum</h2>
                     <img class="project-gif" src="images/lorem-gymsum.gif" alt="lorem gymsum gif">
                     <p class="project-description"><span class="project-highlight">Lorem GYMsum</span>
-                        is a landing page dedicated for a gym which contains various sections such as home, services, pricing, contact etc.
+                        a landing page dedicated to presenting information about a gym and includes areas such as the home page, services and pricing, as well as the possibility of getting in touch with the gym.
                     </p>
                     <p class="project-description"><span class="project-highlight">Project</span>
                         shows the ability to create responsive web design.
@@ -195,7 +195,7 @@
                     </p>
                     <p class="project-description">
                         <span class="project-highlight">Project</span>
-                         exhibits the ability of using advance css such as making responsive images, media queries, css functions etc.  
+                         exhibits the ability of using advanced css such as making responsive images, media queries, transition, transform etc.  
                     </p>
                     <div class="button-container">
                         <div class="button-link"><a class="view-code-button" href="https://github.com/mikowesome/lorem-gymsum" target="_blank" rel="noopener noreferrer">View Code</a></div>
@@ -207,7 +207,7 @@
                     <h2 class="project-title">Library App</h2>
                     <img class="project-gif" src="images/library.gif" alt="library app gif">
                     <p class="project-description"><span class="project-highlight">Library App</span>
-                        is a library web app that lets you create, remove, update and delete books you have read or plan to read like a normal library.
+                        allows you to create and remove books from your library, update and delete them like you would do in a normal library or add books you intend to read to your library.
                     </p>
                     <p class="project-description"><span class="project-highlight">Project</span>
                         shows the ability to use object constructors and use the data, store in an array or manipulate the object.
