Update project description

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <h2 class="project-title">Nendoroid</h2>
                     <img class="project-gif" src="images/nendoroid.gif" alt="nendoroid gif">
                     <p class="project-description"><span class="project-highlight">Nendoroid</span>
-                        is a single-page e-commerce website display products dynamically into the web page. You can also add items to the shopping cart, modify the amount, remove an item, or empty the cart.
+                        is a single-page e-commerce website that display products dynamically into the web page. You can also add items to the shopping cart, modify the amount, remove an item, or empty the cart.
                     </p>
                     <p class="project-description"><span class="project-highlight">Project</span>
                         shows the ability to use class constructors to create reusable and well structured code.
